@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>609</width>
-    <height>364</height>
+    <height>507</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -173,7 +173,7 @@
              <property name="verticalSpacing">
               <number>1</number>
              </property>
-             <item row="3" column="0">
+             <item row="5" column="0">
               <widget class="QLabel" name="label_4">
                <property name="sizePolicy">
                 <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
@@ -186,7 +186,7 @@
                </property>
               </widget>
              </item>
-             <item row="3" column="1">
+             <item row="5" column="1">
               <widget class="QDoubleSpinBox" name="tuningSpinBox">
                <property name="sizePolicy">
                 <sizepolicy hsizetype="Expanding" vsizetype="Fixed">
@@ -211,7 +211,7 @@
                </property>
               </widget>
              </item>
-             <item row="4" column="0">
+             <item row="6" column="0">
               <widget class="QLabel" name="label_7">
                <property name="sizePolicy">
                 <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
@@ -224,14 +224,14 @@
                </property>
               </widget>
              </item>
-             <item row="6" column="0">
+             <item row="8" column="0">
               <widget class="QLabel" name="label_8">
                <property name="text">
                 <string>velocity (0-127)</string>
                </property>
               </widget>
              </item>
-             <item row="4" column="1">
+             <item row="6" column="1">
               <widget class="QComboBox" name="_veloType">
                <property name="sizePolicy">
                 <sizepolicy hsizetype="Expanding" vsizetype="Fixed">
@@ -256,7 +256,7 @@
                </item>
               </widget>
              </item>
-             <item row="6" column="1">
+             <item row="8" column="1">
               <widget class="QSpinBox" name="velocity">
                <property name="sizePolicy">
                 <sizepolicy hsizetype="Expanding" vsizetype="Fixed">
@@ -266,7 +266,7 @@
                </property>
               </widget>
              </item>
-             <item row="2" column="0">
+             <item row="4" column="0">
               <widget class="QLabel" name="label_5">
                <property name="sizePolicy">
                 <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
@@ -279,7 +279,7 @@
                </property>
               </widget>
              </item>
-             <item row="2" column="1">
+             <item row="4" column="1">
               <widget class="QComboBox" name="userMirror">
                <property name="sizePolicy">
                 <sizepolicy hsizetype="Expanding" vsizetype="Fixed">
@@ -300,6 +300,125 @@
                <item>
                 <property name="text">
                  <string>right of stem</string>
+                </property>
+               </item>
+              </widget>
+             </item>
+             <item row="2" column="0">
+              <widget class="QLabel" name="label_13">
+               <property name="text">
+                <string>Note Head Group</string>
+               </property>
+              </widget>
+             </item>
+             <item row="3" column="0">
+              <widget class="QLabel" name="label_14">
+               <property name="text">
+                <string>Note Head Type</string>
+               </property>
+              </widget>
+             </item>
+             <item row="2" column="1">
+              <widget class="QComboBox" name="noteHeadGroup">
+               <property name="sizePolicy">
+                <sizepolicy hsizetype="Expanding" vsizetype="Fixed">
+                 <horstretch>0</horstretch>
+                 <verstretch>0</verstretch>
+                </sizepolicy>
+               </property>
+               <item>
+                <property name="text">
+                 <string>normal</string>
+                </property>
+               </item>
+               <item>
+                <property name="text">
+                 <string>cross</string>
+                </property>
+               </item>
+               <item>
+                <property name="text">
+                 <string>diamond</string>
+                </property>
+               </item>
+               <item>
+                <property name="text">
+                 <string>triangle</string>
+                </property>
+               </item>
+               <item>
+                <property name="text">
+                 <string>slash</string>
+                </property>
+               </item>
+               <item>
+                <property name="text">
+                 <string>xcircle</string>
+                </property>
+               </item>
+               <item>
+                <property name="text">
+                 <string>do</string>
+                </property>
+               </item>
+               <item>
+                <property name="text">
+                 <string>re</string>
+                </property>
+               </item>
+               <item>
+                <property name="text">
+                 <string>mi</string>
+                </property>
+               </item>
+               <item>
+                <property name="text">
+                 <string>fa</string>
+                </property>
+               </item>
+               <item>
+                <property name="text">
+                 <string>la</string>
+                </property>
+               </item>
+               <item>
+                <property name="text">
+                 <string>ti</string>
+                </property>
+               </item>
+              </widget>
+             </item>
+             <item row="3" column="1">
+              <widget class="QComboBox" name="noteHeadType">
+               <property name="sizePolicy">
+                <sizepolicy hsizetype="Expanding" vsizetype="Fixed">
+                 <horstretch>0</horstretch>
+                 <verstretch>0</verstretch>
+                </sizepolicy>
+               </property>
+               <item>
+                <property name="text">
+                 <string>Auto</string>
+                </property>
+               </item>
+               <item>
+                <property name="text">
+                 <string>whole</string>
+                </property>
+               </item>
+               <item>
+                <property name="text">
+                 <string>half</string>
+                </property>
+               </item>
+               <item>
+                <property name="text">
+                 <string>quarter</string>
+                </property>
+               </item>
+               <item>
+                <property name="text">
+                 <string>breve</string>
                 </property>
                </item>
               </widget>
