@@ -929,10 +929,11 @@ class RemoveElement : public UndoCommand {
 class ChangeNoteHead : public UndoCommand {
       Note* note;
       int group;
+      NoteHeadType type;
       void flip();
 
    public:
-      ChangeNoteHead(Note* note, int group);
+      ChangeNoteHead(Note* note, int group, NoteHeadType type);
       virtual void undo() { flip(); }
       virtual void redo() { flip(); }
       };
